crates/config/tests/snapshots/project_env__managed_env_block_transformer_rejects_malformed_markers.snap
---
source: crates/config/tests/project_env.rs
expression: malformed
---
[
    (
        "start-without-end",
        Err(
            MalformedManagedEnvBlock {
                reason: "start marker without end marker",
            },
        ),
    ),
    (
        "end-without-start",
        Err(
            MalformedManagedEnvBlock {
                reason: "end marker without start marker",
            },
        ),
    ),
    (
        "nested-start",
        Err(
            MalformedManagedEnvBlock {
                reason: "nested start marker",
            },
        ),
    ),
]
