crates/config/tests/snapshots/project_env__project_env_renderer_rejects_same_depth_duplicate_keys.snap
---
source: crates/config/tests/project_env.rs
expression: "&duplicate"
---
Err(
    DuplicateRenderedEnvKey {
        key: "DATABASE_URL",
        first: "mysql.allocations.analytics.env.DATABASE_URL",
        second: "mysql.allocations.app.env.DATABASE_URL",
    },
)
