crates/config/tests/snapshots/project_env__project_env_renderer_rejects_same_depth_resource_duplicate_keys.snap
---
source: crates/config/tests/project_env.rs
expression: "(&validation, &duplicate)"
---
(
    Err(
        DuplicateRenderedEnvKey {
            key: "DB_HOST",
            first: "mysql.env.DB_HOST",
            second: "redis.env.DB_HOST",
        },
    ),
    Err(
        DuplicateRenderedEnvKey {
            key: "DB_HOST",
            first: "mysql.env.DB_HOST",
            second: "redis.env.DB_HOST",
        },
    ),
)
