crates/config/tests/snapshots/project_env__project_env_renderer_resolves_project_url_from_primary_hostname_across_scopes.snap
---
source: crates/config/tests/project_env.rs
expression: "(&rendered, format_project_env(&rendered))"
---
(
    RenderedProjectEnv {
        values: {
            "ALLOCATION_PROJECT_URL": "https://primary.acme.test",
            "ALLOCATION_SERVICE_URL": "mysql://root:secret@127.0.0.1:3306/acme_test_app",
            "RESOURCE_PROJECT_URL": "https://primary.acme.test",
            "RESOURCE_SERVICE_URL": "mysql://root:secret@127.0.0.1:3306",
            "ROOT_PROJECT_URL": "https://primary.acme.test",
        },
    },
    "ALLOCATION_PROJECT_URL=https://primary.acme.test\nALLOCATION_SERVICE_URL=mysql://root:secret@127.0.0.1:3306/acme_test_app\nRESOURCE_PROJECT_URL=https://primary.acme.test\nRESOURCE_SERVICE_URL=mysql://root:secret@127.0.0.1:3306\nROOT_PROJECT_URL=https://primary.acme.test\n",
)
