crates/config/tests/snapshots/project_env__project_env_renderer_resolves_url_by_scope.snap
---
source: crates/config/tests/project_env.rs
expression: "(&rendered, format_project_env(&rendered))"
---
(
    RenderedProjectEnv {
        values: {
            "ALLOCATION_SERVICE_URL": "mysql://root:secret@127.0.0.1:3306/acme_test_app",
            "RESOURCE_SERVICE_URL": "mysql://root:secret@127.0.0.1:3306",
            "ROOT_URL": "https://primary.acme.test",
        },
    },
    "ALLOCATION_SERVICE_URL=mysql://root:secret@127.0.0.1:3306/acme_test_app\nRESOURCE_SERVICE_URL=mysql://root:secret@127.0.0.1:3306\nROOT_URL=https://primary.acme.test\n",
)
